bumped up to 1.2.1